classDiagram
    direction LR

    %% Controller layer
    class ReviewerSuggestionController

    %% Service interface and implementation
    class IReviewerSuggestionService
    class ReviewerSuggestionService
    ReviewerSuggestionController --> IReviewerSuggestionService : "calls"
    ReviewerSuggestionService ..|> IReviewerSuggestionService : "implements"

    %% Dependencies
    class GeminiAIService
    class IUnitOfWork
    ReviewerSuggestionService --> GeminiAIService : "uses"
    ReviewerSuggestionService --> IUnitOfWork : "uses"

    %% Entities (focused)
    class User
    class LecturerSkill
    class ReviewerAssignment

    %% IUnitOfWork provides access to entity repositories
    IUnitOfWork --> User

    %% Entity relationships (focused, no duplicates)
    User "1" o-- "*" LecturerSkill : "has skills"
    User "1" o-- "*" ReviewerPerformance : "has assignments"
